# govuk-tech-docs-sphinx-theme

./: .buildinfo  .coveragerc  .envrc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  accessibility.html  build_alphagov_tech_docs_template.sh  example_accessibility.md  example_conf.py  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: accessibility.doctree  environment.pickle  index.doctree
.doctrees/contributor_guide/: CODE_OF_CONDUCT.doctree  CONTRIBUTING.doctree  README.doctree  loading_environment_variables.doctree  pre_commit_hooks.doctree  theme_development.doctree  updating_gitignore.doctree  writing_sphinx_documentation.doctree
.doctrees/example_components/: README.doctree  markdown.doctree  restructuredtext.doctree
.doctrees/reference/: README.doctree
.doctrees/structure/: README.doctree  docs.doctree  govuk_tech_docs_sphinx_theme.doctree  source.doctree  tests.doctree
.github/: pull_request_template.md
.github/workflows/: build.yml  deploy-github-pages.yml  deploy-package-and-documentation.yml
_sources/contributor_guide/: CONTRIBUTING.md.txt  pre_commit_hooks.md.txt
_sources/reference/: README.md.txt
_sources/structure/: govuk_tech_docs_sphinx_theme.md.txt
contributor_guide/: CODE_OF_CONDUCT.html  CONTRIBUTING.html  README.html  loading_environment_variables.html  pre_commit_hooks.html  theme_development.html  updating_gitignore.html  writing_sphinx_documentation.html
docs/: README.md  accessibility.md  conf.py  index.md
docs/contributor_guide/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  loading_environment_variables.md  pre_commit_hooks.md  theme_development.md  updating_gitignore.md  writing_sphinx_documentation.md
docs/example_components/: README.md  markdown.md  restructuredtext.rst
docs/reference/: README.md
docs/structure/: README.md  govuk_tech_docs_sphinx_theme.md  source.md
docs/user_guide/: README.md  example_components.md  example_components_md.md  (+2 more)
example_components/: README.html  markdown.html  restructuredtext.html
govuk_tech_docs_sphinx_theme/: README.md  __init__.py  contribution_banner.html  footer.html  header_logo.html  header_navigation.html  index.html  layout.html  searchbox.html  sidebar.html  theme.conf
reference/: README.html
source/: README.md
structure/: README.html  docs.html  govuk_tech_docs_sphinx_theme.html  source.html  tests.html
tests/: README.md  test_add_js_files.py
(+32 files in other folders)
